--- a/css/stye.css
+++ b/css/stye.css
@@ -10,32 +10,47 @@ body {
 }
 header {
     background-color: #143d8f;
-    padding: 1rem 0;
+    padding: 1rem 2rem;
 }
 .container {
-    width: 1100px;
+    max-width: 1100px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-       
+    grid-template-columns: 1fr 1fr;      
+}
+header .container {
+    grid-template-columns: 1fr;
+    justify-content: center;
 }
 .logo {
    color:white;
    display: flex;
    align-items: center;
    font-weight: bold;
+   justify-content: center;
+   padding-bottom: 1rem;
+}
+.logo h1 {
+    font-size: 1.25rem;
 }
 .form-login {
     display: grid;
     gap: 1rem;
-    grid-template-columns: 1fr 1fr auto;
+    grid-template-columns: 1fr;
     align-items: flex-end;
+    padding-bottom: 1rem;
+}
+.form-element {
+    display: grid;
 }
 .form-element label {
     font-size: medium;
     color:white;
     margin-bottom: 0.5rem;
     display: inline-block;
+}
+header .form-element label {
+    display: none;
 }
 .form-element input, .form-element button {
     padding: 0.5rem 1rem;
@@ -46,6 +61,11 @@ header {
     display: flex;
     outline: none;
 }
+.form-element button {
+    justify-content: center;
+    background-color: #e0e0e0;
+    font-weight: bold;
+}
 .form-element button:hover {
     cursor: pointer;
 }
@@ -53,26 +73,26 @@ header {
     background-color: #e5e5e5;
 }
 .welcome .container {
-    padding: 3rem 0;
-    grid-template-columns: 1fr 1fr;
+    padding: 2rem;
+    grid-template-columns: 1fr;
 }
 .welcome .container p {
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: bold;
-    margin-bottom: 2rem;
-    padding-right: 2rem;
+    margin-bottom: 1rem;
+    text-align: center;
     font-style: italic;
 }
 .welcome .container img {
     max-width: 100%;
 }
-/* .welcome-form {
-    padding-top: 2rem;
-} */
 .welcome-form h2 {
-    font-size: 3rem;
+    font-size: 1.5rem;
     margin-bottom: 1rem;
     font-weight: bold;
+    padding-top:1rem;
+    text-align: center;
+    
 }
 .welcome-form h4 {
     margin-bottom: 1rem;
@@ -130,3 +150,64 @@ footer .container {
     grid-template-columns: 1fr;
     text-align: center;
 }
+@media screen and (min-width: 600px) {
+    header .container {
+        grid-template-columns: 1fr 1fr;
+        justify-content: flex-start;
+    }
+    .logo {
+        justify-content: flex-start;
+        padding: 0;
+    }
+    .logo h1 {
+        font-size: 1.25rem;
+    }
+    .form-login {
+        grid-template-columns: 1fr 1fr auto;
+    }
+    header .form-element label {
+        display: inline-block;
+    }
+    .form-element input {
+        padding: 0.5rem;
+    }
+    .welcome .container {
+        padding: 2rem;
+        grid-template-columns: 1fr 1fr;
+    }
+    .welcome .container p {
+        font-size: 1rem;
+        font-weight: bold;
+        margin-bottom: 2rem;
+        text-align: left;
+        font-style: italic;
+        padding-right: 2rem;
+    }
+    .welcome-form h2 {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+        font-weight: bold;
+        text-align: left;
+        padding-top: 0;
+    }
+}
+@media screen and (min-width: 800px) {
+    .logo h1 {
+        font-size: 2rem;
+    }
+    .welcome .container {
+        padding: 3rem 2rem;
+    }
+    .welcome .container p {
+        font-size: 1.5rem;
+        padding-right: 2rem;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .welcome-form h2 {
+        font-size: 3rem;
+    }
+    .welcome-form p , .welcome-form h2 {
+        /* margin-left: 0; */
+    }
+} 
